<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/app_logo_name"
        android:layout_width="224dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_app_name"
        android:layout_width="230dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:text="@string/app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_logo_name" />

    <TextView
        android:id="@+id/verification"
        android:layout_width="142dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/verification"
        android:textColor="@color/trashGreen"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_app_name" />

    <TextView
        android:id="@+id/verification_text"
        android:layout_width="339dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:text="@string/verification_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/code_input"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:maxLength="20"
        android:hint="@string/code_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="353dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
