<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/street_number_message_house"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/street_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/street_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/choose_street_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_number_message_house"/>
<!--    <TextView-->
<!--        android:id="@+id/street_number"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_marginTop="10dip"-->
<!--        android:text="Street Number"-->
<!--        android:layout_marginBottom="5dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->
<!--    <Spinner-->
<!--        android:id="@+id/street_spinner"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:minHeight="48dp"-->
<!--        android:contentDescription="Choose street number"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/street_number"/>-->
    <TextView
        android:id="@+id/house_number_message_house"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dip"
        android:text="@string/house_number"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_spinner"/>
    <Spinner
        android:id="@+id/house_spinner_message_house"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/choose_house_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_number_message_house" />

    <TextView
        android:id="@+id/message_message_house"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="234dp" />

    <EditText
        android:id="@+id/message_box_message_house"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/message_hint"
        android:minHeight="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_message_house" />

    <Button
        android:id="@+id/send_message_message_house"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="50dp"
        android:text="@string/send"
        app:iconTint="#A39595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_box_message_house"/>

    </androidx.constraintlayout.widget.ConstraintLayout>