<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kgltrash.view.MainActivity"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/update_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_account"
                android:textSize="25dp"
                android:textColor="@color/trashGreen"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp">

                <EditText
                    android:id="@+id/update_input_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp">

                <EditText
                    android:id="@+id/update_input_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/update_street_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_number_hint"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp">

                <EditText
                    android:id="@+id/update_house_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_number_hint"
                    android:inputType="text" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp">

            <EditText
                android:id="@+id/update_city_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/city_name_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/update_locate_city_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/trashGreen"
                android:text="@string/go_to_map"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp">

                <Spinner
                    android:id="@+id/update_input_user_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"

                    android:entries="@array/usertypes"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp">

                <EditText
                    android:id="@+id/update_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/update_account"
                android:id="@+id/update_account_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/trashGreen"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
