<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.kgltrash.view.PaymentActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontWeight="900"
            android:textColor="@color/trashGreen"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/payment_word" />

        <ImageView
            android:id="@+id/home_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/home_button"
            android:layout_gravity="end"
            app:flow_horizontalAlign="end"
            android:layout_weight="0.1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_month"
                android:textSize="17dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp">

            <Spinner
                android:id="@+id/month_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"

                android:entries="@array/months"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receipt"
                android:textSize="17dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center">

            <!--        Author: Aanuoluwapo Orioke  -->

            <FrameLayout
                android:id="@+id/receipt_image_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/browse_file"
                app:backgroundTint="#8A8A8A" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/upload"
            android:id="@+id/upload_receipt"
            android:textColor="@color/white"
            android:backgroundTint="@color/trashGreen"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
</LinearLayout>

